Normalize line endings